# plover-korean-lite

./: .gitignore  MANIFEST.in  README.md  setup.cfg
plover_korean_lite/: system.py
plover_korean_lite/dictionaries/: commands.json  main.json  user.json
