[metadata]
name = plover-korean-lite
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools>=30.3.0
install_requires =
    plover>=4.0.0.dev10
packages =
    plover_korean_lite

[options.entry_points]
plover.system = 
    Korean (Lite) = plover_korean_lite.system
